--- a/theme.toml
+++ b/theme.toml
@@ -3,19 +3,13 @@
 
 name = "Reproach"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE.md"
-description = ""
-homepage = "http://siteforthistheme.com/"
-tags = ["", ""]
-features = ["", ""]
+licenselink = "https://github.com/dg01d/reproach/blob/master/LICENSE.md"
+description = "Hugo Templates are driving me mad, so I decided to create my own."
+homepage = "https://ascraeus.org/"
+tags = ["barebone", "brutal"]
+features = ["none", "twittercards", "skeleton", "svg"]
 min_version = 0.18
 
 [author]
-  name = ""
-  homepage = ""
-
-# If porting an existing theme
-[original]
-  name = ""
-  homepage = ""
-  repo = ""
+  name = "Daniel Goldsmith"
+  homepage = "https://ascraeus.org"
